Update app structure and use sdk from core

--- a/src/main/dialogs/about/about.html
+++ b/src/main/dialogs/about/about.html
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="close-button" data-action="close" title="Close (ESC)">×</div>
     <div class="logo-container">
-      <img src="../../resources/icon.png" alt="Datalayer Logo" class="logo-img" />
+      <img src="../resources/icon.png" alt="Datalayer Logo" class="logo-img" />
     </div>
     
     <h1>Datalayer</h1>
